K8s/trips/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  labels:
    app: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registrywjl7126.azurecr.io/trips:0.0.1
        ports:
        - containerPort: 80
