K8s/trips/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips-svc
spec:
  selector:
    app: trips
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
