K8s/trips/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trips-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api/trips
        pathType: Prefix
        backend:
          service:  
            name: trips-svc
            port:
              number: 80
